Metadata v2.3/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>CheckboxField__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checbox Field Description</description>
        <inlineHelpText>Checkox Field Help Text</inlineHelpText>
        <label>CheckboxFieldNew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrencyField__c</fullName>
        <description>Currency Field Description</description>
        <inlineHelpText>Currency Help Text</inlineHelpText>
        <label>CurrencyField</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DateField__c</fullName>
        <description>Date Field Description</description>
        <inlineHelpText>Date Help Text</inlineHelpText>
        <label>DateField</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateTimeField__c</fullName>
        <description>DateTime Field Description</description>
        <inlineHelpText>DateTime Help Text</inlineHelpText>
        <label>DateTimeField</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EmailField__c</fullName>
        <description>Email Field Description</description>
        <inlineHelpText>Email Help Text</inlineHelpText>
        <label>EmailField</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enter_date_of_birth12_in_years__c</fullName>
        <description>Date Field Description</description>
        <inlineHelpText>Date Help Text</inlineHelpText>
        <label>Enter date of birth12#(in years)</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enter_date_of_birth_in_years__c</fullName>
        <description>Date Field Description</description>
        <inlineHelpText>Date Help Text</inlineHelpText>
        <label>Enter date of birth(in years)</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HtmlField__c</fullName>
        <description>Testing Rich Text Field Description</description>
        <inlineHelpText>Testing Rich Text Field Help Text</inlineHelpText>
        <label>HtmlField</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LocationField__c</fullName>
        <description>Geolocation Field Description</description>
        <inlineHelpText>Geolocation Help Text</inlineHelpText>
        <label>LocationField</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>LongTextAreaField__c</fullName>
        <description>Long Text Area Description</description>
        <inlineHelpText>Testing Long Text Area Help Text</inlineHelpText>
        <label>LongTextAreaField</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MultiselectPicklistField__c</fullName>
        <description>Text Multi Picklist Description</description>
        <inlineHelpText>Mutlipicklist Help Text</inlineHelpText>
        <label>MultiselectPicklistField</label>
        <picklist>
            <picklistValues>
                <fullName>pick1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pick2</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>NumberField__c</fullName>
        <description>Number Field Description</description>
        <inlineHelpText>Number Help Text</inlineHelpText>
        <label>NumberField</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PercentField__c</fullName>
        <description>Percent Field Description</description>
        <inlineHelpText>Percent Help Text</inlineHelpText>
        <label>PercentField</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PhoneField__c</fullName>
        <description>Phone Field Description</description>
        <inlineHelpText>Phone Help Text</inlineHelpText>
        <label>PhoneField</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PicklistField__c</fullName>
        <description>Text Picklist Description</description>
        <inlineHelpText>Picklist Help Text</inlineHelpText>
        <label>PicklistField</label>
        <picklist>
            <picklistValues>
                <fullName>pick1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pick2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TextAreaField__c</fullName>
        <description>TextArea Field Description</description>
        <inlineHelpText>TextArea Help Text</inlineHelpText>
        <label>TextAreaField</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TextField__c</fullName>
        <description>Text Field Description</description>
        <inlineHelpText>Text Field Help Text</inlineHelpText>
        <label>TextField</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UrlField__c</fullName>
        <description>Testing Url Field Description</description>
        <inlineHelpText>Testing Url Field Help Text</inlineHelpText>
        <label>UrlField</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>X22__c</fullName>
        <description>DateTime Field Description</description>
        <inlineHelpText>DateTime Help Text</inlineHelpText>
        <label>22</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X22a1__c</fullName>
        <description>DateTime Field Description</description>
        <inlineHelpText>DateTime Help Text</inlineHelpText>
        <label>22a1</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>aaaaa__c</fullName>
        <description>Text Field Description</description>
        <inlineHelpText>Text Field Help Text</inlineHelpText>
        <label>meta1__Test2</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>abababa__c</fullName>
        <description>Text Field Description</description>
        <inlineHelpText>Text Field Help Text</inlineHelpText>
        <label>meta1__Test2</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>bbkjjk2__c</fullName>
        <description>Text Field Description</description>
        <inlineHelpText>Text Field Help Text</inlineHelpText>
        <label>meta1__Test2</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>cvbv__c</fullName>
        <description>Text Field Description</description>
        <inlineHelpText>Text Field Help Text</inlineHelpText>
        <label>meta1__Test2</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>meta1Test13__c</fullName>
        <description>TextArea Field Description</description>
        <inlineHelpText>TextArea Help Text</inlineHelpText>
        <label>meta1Test13</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>meta1_Test22__c</fullName>
        <description>Text Field Description</description>
        <inlineHelpText>Text Field Help Text</inlineHelpText>
        <label>meta1__Test2</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>meta1_Test22a__c</fullName>
        <description>Text Field Description</description>
        <inlineHelpText>Text Field Help Text</inlineHelpText>
        <label>meta1__Test2</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>meta1_Test2a1__c</fullName>
        <description>Text Field Description</description>
        <inlineHelpText>Text Field Help Text</inlineHelpText>
        <label>meta1__Test2</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>meta1_Test2as__c</fullName>
        <description>Text Field Description</description>
        <inlineHelpText>Text Field Help Text</inlineHelpText>
        <label>meta1__Test2</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>meta1_Test2mm__c</fullName>
        <description>Text Field Description</description>
        <inlineHelpText>Text Field Help Text</inlineHelpText>
        <label>meta1__Test2</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>meta1zx_Test2__c</fullName>
        <description>Text Field Description</description>
        <inlineHelpText>Text Field Help Text</inlineHelpText>
        <label>meta1__Test2</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>SLA__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>